<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/single_item_dimension"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="4dp"
    android:background="@drawable/list_item_selector"
    android:addStatesFromChildren="true"
    android:id="@+id/element_layout">


    <androidx.cardview.widget.CardView
        android:layout_width="47dp"
        android:layout_height="match_parent"
        android:id="@+id/card_image_preview"
        android:background="#00000000"
        android:backgroundTint="#00FDE599"
        app:cardElevation="0dp"
        app:cardCornerRadius="10dp">
        <ImageView
            android:id="@+id/element_image"
            android:layout_width="47dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:scaleType="centerCrop"
            android:background="#00000000"
            android:contentDescription="@string/image_preview_description" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@id/element_options"
        android:layout_toEndOf="@id/card_image_preview"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center_vertical"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:id="@+id/element_info">

        <TextView
            android:id="@+id/element_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textSize="@dimen/normal_text_size"
            android:textColor="@color/colorOnBackground"
            android:text="filename"
            android:layout_marginBottom="2dp"/>

        <TextView
            android:id="@+id/element_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorOnBackground"
            android:maxLines="1"
            android:textSize="@dimen/small_text_size"
            android:text="description"/>
    </LinearLayout>

    <Button
        android:id="@+id/element_options"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_centerInParent="true"
        android:background="@android:color/transparent"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        android:textAlignment="center"
        android:text="@string/settings_points_string"/>

</RelativeLayout>