<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingTop="20dp"
    android:paddingBottom="10dp"
    android:background="@drawable/dialog_shape">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure_string"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_gravity="center"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/big_text_size"/>

    <LinearLayout
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/buttonBarButtonStyle"
        android:padding="10dp">

        <Button
            android:id="@+id/no_button"
            android:text="@string/no_upper_string"
            android:background="@color/zxing_transparent"
            android:layout_marginEnd="10dp"
            android:textColor="#FF0000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/yes_button"
            android:text="@string/yes_upper_string"
            android:textColor="@color/colorPrimaryDark"
            android:background="@color/zxing_transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>

</LinearLayout>