...
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="0dp">

        <!-- FILES RECYCLER VIEW -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/storage_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.leinardi.android.speeddial.SpeedDialView
        android:id="@+id/upload_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="50dp"/>
...
