<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/delete_option"
        android:title="@string/delete_directory"
        android:icon="@drawable/ic_delete_24dp" />

    <item
        android:id="@+id/info_option"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/info_string" />

</menu>