...
    <string name="me_string">ME</string>
    <string name="settings_string">SETTINGS</string>
    <string name="directory_deleted">Directory successfully deleted</string>
    <string name="delete_directory">Delete Directory</string>
    <string name="info_string">Info</string>
    <string name="logout_string">Log out</string>
    <string name="offline_string">OFFLINE</string>
    <string name="recent_string">RECENT</string>
    <string name="are_you_sure_string">Are you Sure?</string>
    <string name="qr_code_dialog_title">QR CODE</string>
    <string name="qrcode_string">QRCODE</string>
    <string name="qr_code_saved">QR code successfully saved</string>
    <string name="qrcode_already_saved">Qr code already saved!</string>
    <string name="go_back_directory_button_description">go-back directory button</string>
    <string name="fileName_string">fileName</string>
    <string name="image_preview_description">Image preview</string>
    <string name="root_string">home</string>
    <string name="default_folder_string">my_folder</string>
    <string name="confirm_upper_string">Confirm</string>
    <string name="cancel_upper_string">Cancel</string>
    <string name="yes_upper_string">YES</string>
    <string name="no_upper_string">NO</string>
    <string name="null_email">Please insert the email</string>
...
    <string name="display_name_string">Display name:</string>
    <string name="version">version 1.0.0</string>
    <string name="total_space_used">Total space used:</string>
    <string name="file_number_stored">File stored:</string>
    <string name="offline">OFFLINE</string>
    <string name="home">HOME</string>
    <string name="storage">STORAGE</string>
    <string name="recent">RECENT</string>
    <string name="about">About</string>
    <string name="english">English</string>
    <string name="italian">Italian</string>
    <string name="language">Language</string>
    <string name="local_file_deleted">Local file deleted!</string>
...
