<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ScannerActivity">

    <include layout="@layout/toolbar_layout"/>

    <com.journeyapps.barcodescanner.DecoratedBarcodeView
        android:id="@+id/barcode_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:zxing_use_texture_view="false"
        app:zxing_preview_scaling_strategy='centerCrop'>

    </com.journeyapps.barcodescanner.DecoratedBarcodeView>


</LinearLayout>