...
    <androidx.viewpager.widget.ViewPager
        android:id="@+id/main_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <com.aurelhubert.ahbottomnavigation.AHBottomNavigation
        android:id="@+id/main_navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_navigation_view_dim"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bottom_navigation_view_shape"
        style="@style/bottom_navigation_view_style"/>
...
