<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="50dp" android:id="@+id/titlebar"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/get_back_directory"
        android:layout_width="20dp"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:src="@drawable/ic_get_back_directory_24dp"
        android:layout_toStartOf="@id/title"
        android:visibility="invisible"
        android:contentDescription="@string/go_back_directory_button_description" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAlignment="center"
        android:layout_marginEnd="80dp"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/big_text_size"
        android:textStyle="bold"
        android:textColor="@color/colorOnPrimary"
        android:text="@string/root_string"/>

</RelativeLayout>